--- a/huntloadout.html
+++ b/huntloadout.html
@@ -43,16 +43,16 @@
             <div>
               <input type="checkbox" id="weapon1" checked="true" />
               <label for="weapon1"><img id="w1" src="img/emptyLarge.jpg"/></label>
-              <img class="hover1" src="img/reroll.jpg" onclick="reroll(weapon1)" />
-              <img class="hover2" src="img/previous.jpg" onclick="previous(weapon1)" />
+              <img class="hover1" src="img/reroll.jpg" onclick="reroll('weapon1')" />
+              <img class="hover2" src="img/previous.jpg" onclick="previous('weapon1')" />
             </div>
           </li>
           <li>
             <div>
               <input type="checkbox" id="weapon2" checked />
               <label for="weapon2"><img id="w2" src="img/emptySmall.jpg"/></label>
-              <img class="hover1" src="img/reroll.jpg" onclick="rerollWeapon2()" />
-              <img class="hover2" src="img/previous.jpg" onclick="previousWeapon2()" />
+              <img class="hover1" src="img/reroll.jpg" onclick="reroll('weapon2')" />
+              <img class="hover2" src="img/previous.jpg" onclick="previous('weapon2')" />
             </div>
           </li>
           <label>Tools</label>
@@ -60,26 +60,26 @@
             <div>
               <input type="checkbox" id="tool1" checked />
               <label for="tool1"><img id="t1" src="img/emptySmall.jpg"/></label> 
-              <img class="hover1" src="img/reroll.jpg" onclick="rerollWeapon2()" />
-              <img class="hover2" src="img/previous.jpg" onclick="previousWeapon2()" />
+              <img class="hover1" src="img/reroll.jpg" onclick="reroll('tool1')" />
+              <img class="hover2" src="img/previous.jpg" onclick="previous('tool1')" />
             </div>
             <div>
               <input type="checkbox" id="tool2" checked />
               <label for="tool2"><img id="t2" src="img/emptySmall.jpg"/></label> 
-              <img class="hover1" src="img/reroll.jpg" onclick="rerollWeapon2()" />
-              <img class="hover2" src="img/previous.jpg" onclick="previousWeapon2()" />
+              <img class="hover1" src="img/reroll.jpg" onclick="reroll('tool2')" />
+              <img class="hover2" src="img/previous.jpg" onclick="previous('tool2')" />
             </div>
             <div>
               <input type="checkbox" id="tool3" checked />
               <label for="tool3"><img id="t3" src="img/emptySmall.jpg"/></label>
-              <img class="hover1" src="img/reroll.jpg" onclick="rerollWeapon2()" />
-              <img class="hover2" src="img/previous.jpg" onclick="previousWeapon2()" /> 
+              <img class="hover1" src="img/reroll.jpg" onclick="reroll('tool3')" />
+              <img class="hover2" src="img/previous.jpg" onclick="previous('tool3')" />
             </div>
             <div>
               <input type="checkbox" id="tool4" checked />
               <label for="tool4"><img id="t4" src="img/emptySmall.jpg"/></label> 
-              <img class="hover1" src="img/reroll.jpg" onclick="rerollWeapon2()" />
-              <img class="hover2" src="img/previous.jpg" onclick="previousWeapon2()" />
+              <img class="hover1" src="img/reroll.jpg" onclick="reroll('tool4')" />
+              <img class="hover2" src="img/previous.jpg" onclick="previous('tool4')" />
             </div>
           </li>
           <label>Consumables</label>
@@ -87,26 +87,26 @@
             <div>
               <input type="checkbox" id="consumable1" checked />
               <label for="consumable1"><img id="c1" src="img/emptySmall.jpg"/></label>
-              <img class="hover1" src="img/reroll.jpg" onclick="rerollWeapon2()" />
-              <img class="hover2" src="img/previous.jpg" onclick="previousWeapon2()" /> 
+              <img class="hover1" src="img/reroll.jpg" onclick="reroll('consumable1')" />
+              <img class="hover2" src="img/previous.jpg" onclick="previous('consumable1')" />
             </div>
             <div>
               <input type="checkbox" id="consumable2" checked />
               <label for="consumable2"><img id="c2" src="img/emptySmall.jpg"/></label> 
-              <img class="hover1" src="img/reroll.jpg" onclick="rerollWeapon2()" />
-              <img class="hover2" src="img/previous.jpg" onclick="previousWeapon2()" />
+              <img class="hover1" src="img/reroll.jpg" onclick="reroll('consumable2')" />
+              <img class="hover2" src="img/previous.jpg" onclick="previous('consumable2')" />
             </div>
             <div>
               <input type="checkbox" id="consumable3" checked />
               <label for="consumable3"><img id="c3" src="img/emptySmall.jpg"/></label> 
-              <img class="hover1" src="img/reroll.jpg" onclick="rerollWeapon2()" />
-              <img class="hover2" src="img/previous.jpg" onclick="previousWeapon2()" />
+              <img class="hover1" src="img/reroll.jpg" onclick="reroll('consumable3')" />
+              <img class="hover2" src="img/previous.jpg" onclick="previous('consumable3')" />
             </div>
             <div>
               <input type="checkbox" id="consumable4" checked />
               <label for="consumable4"><img id="c4" src="img/emptySmall.jpg"/></label> 
-              <img class="hover1" src="img/reroll.jpg" onclick="rerollWeapon2()" />
-              <img class="hover2" src="img/previous.jpg" onclick="previousWeapon2()" />
+              <img class="hover1" src="img/reroll.jpg" onclick="reroll('consumable4')" />
+              <img class="hover2" src="img/previous.jpg" onclick="previous('consumable4')" />
             </div>
           </li>
         </form>
