--- a/huntloadout.html
+++ b/huntloadout.html
@@ -8,6 +8,9 @@
   <meta name="author" content="RichardCQC">
   <link rel="stylesheet" href="css/style.css">
   <script src="js/script.js"></script>
+  <link rel="icon" 
+      type="image/png" 
+      href="img/navicon.png">
 </head>
  
 <body>
@@ -21,15 +24,24 @@
         <input type="number" id="rank" name="rank" min="1" max="100" value="100">
         <br><br>
         <div class="option">
-          <input type="checkbox" id="dual" name="dual" checked />
+          <label class="switch">
+            <input type="checkbox" id="dual" name="dual" checked />
+            <span class="slider round"></span>
+          </label>
           <label for="dual">Dual Wield</label>
         </div>
         <div class="option">
-          <input type="checkbox" id="dup" name="dup" checked />
+          <label class="switch">
+            <input type="checkbox" id="dup" name="dup" checked />
+            <span class="slider round"></span>
+          </label>
           <label for="dup">Dupplicate Weapons</label>
         </div>
         <div class="option">
-          <input type="checkbox" id="quartermaster" name="quartermaster" />
+          <label class="switch">
+            <input type="checkbox" id="quartermaster" name="quartermaster" />
+            <span class="slider round"></span>
+          </label>
           <label for="quartermaster">Quartermaster</label>
         </div>
         <br><br>
