--- a/huntloadout.html
+++ b/huntloadout.html
@@ -35,7 +35,7 @@
             <input type="checkbox" id="dup" name="dup" checked />
             <span class="slider round"></span>
           </label>
-          <label for="dup">Dupplicate Weapons</label>
+          <label for="dup">Duplicate Weapons</label>
         </div>
         <div class="option">
           <label class="switch">
