--- a/huntloadout.html
+++ b/huntloadout.html
@@ -25,7 +25,7 @@
       <img src="img/banner.jpg" alt="Hunt Showdown Loadout Generator"/>
     </div>
   	<div class="body-content">
-      <form onsubmit="generate();return false">
+      <form onsubmit="return false">
         <label for="rank">Bloodline Rank:</label>
         <input type="number" id="rank" name="rank" min="1" max="100" value="100">
         <br><br>
