Added roll animation, sound and options

--- a/huntloadout.html
+++ b/huntloadout.html
@@ -24,6 +24,31 @@
   	<div class="header">
       <img src="img/banner.jpg" alt="Hunt Showdown Loadout Generator"/>
     </div>
+    <div class="option-menu">
+      <a id="nav-toggle" class="noselect" onclick="toggleMenu()">&#9776;</a>
+      <span id="menu">
+        <div class="option">
+          <label class="switch">
+            <input type="checkbox" id="sound" name="sound" checked />
+            <span class="slider round"></span>
+          </label>
+          <label for="sound">Sound</label>
+        </div>
+        <div class="option">
+          <label class="switch">
+            <input type="checkbox" id="anim" name="anim" checked />
+            <span class="slider round"></span>
+          </label>
+          <label for="anim">Roll Animation</label>
+        </div>
+      </span>
+    </div>
+    <audio id="tick" autoplay="autoplay">
+      <source src="sound/tick.wav"></source>
+    </audio>
+    <audio id="found" autoplay="autoplay">
+      <source src="sound/found.m4a"></source>
+    </audio>
   	<div class="body-content">
       <form onsubmit="return false">
         <label for="rank">Bloodline Rank:</label>
@@ -60,7 +85,7 @@
           <li>
             <div>
               <input type="checkbox" id="weapon1" checked="true" />
-              <label for="weapon1"><img id="w1" src="img/emptyLarge.jpg"/></label>
+              <label class="noselect" for="weapon1"><img id="w1" src="img/emptyLarge.jpg"/></label>
               <img class="hover1" src="img/reroll.jpg" onclick="reroll('weapon1')" />
               <img class="hover2" src="img/previous.jpg" onclick="previous('weapon1')" />
             </div>
@@ -68,7 +93,7 @@
           <li>
             <div>
               <input type="checkbox" id="weapon2" checked />
-              <label for="weapon2"><img id="w2" src="img/emptySmall.jpg"/></label>
+              <label class="noselect" for="weapon2"><img id="w2" src="img/emptySmall.jpg"/></label>
               <img class="hover1" src="img/reroll.jpg" onclick="reroll('weapon2')" />
               <img class="hover2" src="img/previous.jpg" onclick="previous('weapon2')" />
             </div>
@@ -77,25 +102,25 @@
           <li>
             <div>
               <input type="checkbox" class="tool" id="tool1" checked />
-              <label for="tool1"><img id="t1" src="img/emptySmall.jpg"/></label> 
+              <label class="noselect" for="tool1"><img id="t1" src="img/emptySmall.jpg"/></label> 
               <img class="hover1" src="img/reroll.jpg" onclick="reroll('tool1')" />
               <img class="hover2" src="img/previous.jpg" onclick="previous('tool1')" />
             </div>
             <div>
               <input type="checkbox" class="tool" id="tool2" checked />
-              <label for="tool2"><img id="t2" src="img/emptySmall.jpg"/></label> 
+              <label class="noselect" or="tool2"><img id="t2" src="img/emptySmall.jpg"/></label> 
               <img class="hover1" src="img/reroll.jpg" onclick="reroll('tool2')" />
               <img class="hover2" src="img/previous.jpg" onclick="previous('tool2')" />
             </div>
             <div>
               <input type="checkbox" class="tool" id="tool3" checked />
-              <label for="tool3"><img id="t3" src="img/emptySmall.jpg"/></label>
+              <label class="noselect" for="tool3"><img id="t3" src="img/emptySmall.jpg"/></label>
               <img class="hover1" src="img/reroll.jpg" onclick="reroll('tool3')" />
               <img class="hover2" src="img/previous.jpg" onclick="previous('tool3')" />
             </div>
             <div>
               <input type="checkbox" class="tool" id="tool4" checked />
-              <label for="tool4"><img id="t4" src="img/emptySmall.jpg"/></label> 
+              <label class="noselect" for="tool4"><img id="t4" src="img/emptySmall.jpg"/></label> 
               <img class="hover1" src="img/reroll.jpg" onclick="reroll('tool4')" />
               <img class="hover2" src="img/previous.jpg" onclick="previous('tool4')" />
             </div>
@@ -104,25 +129,25 @@
           <li>
             <div>
               <input type="checkbox" id="consumable1" checked />
-              <label for="consumable1"><img id="c1" src="img/emptySmall.jpg"/></label>
+              <label class="noselect" for="consumable1"><img id="c1" src="img/emptySmall.jpg"/></label>
               <img class="hover1" src="img/reroll.jpg" onclick="reroll('consumable1')" />
               <img class="hover2" src="img/previous.jpg" onclick="previous('consumable1')" />
             </div>
             <div>
               <input type="checkbox" id="consumable2" checked />
-              <label for="consumable2"><img id="c2" src="img/emptySmall.jpg"/></label> 
+              <label class="noselect" for="consumable2"><img id="c2" src="img/emptySmall.jpg"/></label> 
               <img class="hover1" src="img/reroll.jpg" onclick="reroll('consumable2')" />
               <img class="hover2" src="img/previous.jpg" onclick="previous('consumable2')" />
             </div>
             <div>
               <input type="checkbox" id="consumable3" checked />
-              <label for="consumable3"><img id="c3" src="img/emptySmall.jpg"/></label> 
+              <label class="noselect" for="consumable3"><img id="c3" src="img/emptySmall.jpg"/></label> 
               <img class="hover1" src="img/reroll.jpg" onclick="reroll('consumable3')" />
               <img class="hover2" src="img/previous.jpg" onclick="previous('consumable3')" />
             </div>
             <div>
               <input type="checkbox" id="consumable4" checked />
-              <label for="consumable4"><img id="c4" src="img/emptySmall.jpg"/></label> 
+              <label class="noselect" for="consumable4"><img id="c4" src="img/emptySmall.jpg"/></label> 
               <img class="hover1" src="img/reroll.jpg" onclick="reroll('consumable4')" />
               <img class="hover2" src="img/previous.jpg" onclick="previous('consumable4')" />
             </div>
