Added loadout cost

--- a/huntloadout.html
+++ b/huntloadout.html
@@ -152,6 +152,10 @@
               <img class="hover2" src="img/previous.jpg" onclick="previous('consumable4')" />
             </div>
           </li>
+          <div id="under">
+            <img src="img/dollars.png"/>
+            <label id="priceTotal">0</label>
+          </div>
         </form>
         </div>
   	</div>
