Added simple home page with social links

--- a/chaos-loadout.html
+++ b/chaos-loadout.html
@@ -41,6 +41,9 @@
           </label>
           <label for="anim">Roll Animation</label>
         </div>
+        <div class = "option">
+          <a class = "linkbutton" href="home.html">Back to Home!</a>
+        </div>
       </span>
     </div>
     <audio id="tick" autoplay="autoplay">
