Hunt Patch 1.5.2 Changes

--- a/home.html
+++ b/home.html
@@ -6,10 +6,8 @@
   <title>The Closed Quarters</title>
   <meta name="description" content="RichardCQC's home page">
   <meta name="author" content="RichardCQC">
-  <link rel="stylesheet" href="css/style.css">
-  <link rel="icon" 
-      type="image/png" 
-      href="img/naviconhome.png">
+  <link rel="stylesheet" href="css/homestyle.css">
+  <link rel="icon" type="image/png" href="img/naviconhome.png">
 </head>
 
 <body>
@@ -31,7 +29,7 @@
                 <a class = "linkbutton" href="https://www.youtube.com/channel/UCjkTWZ3mGiCkbugZ9qXoThA">Youtube</a>
             </div>
             <div class="linkdiv">
-                <a class = "linkbutton" href="https://twitter.com/CqcRichard">Twitter</a>
+                <a class = "linkbutton" href="https://twitter.com/RichardCQC">Twitter</a>
             </div>
             <div class="linkdiv">
                 <a class = "linkbutton" href="https://discord.gg/KvNs2NN">Discord</a>
