--- a/chaos-loadout.html
+++ b/chaos-loadout.html
@@ -7,7 +7,7 @@
   <meta name="description" content="A random loadout generator for the game Hunt : Showdown.">
   <meta name="author" content="RichardCQC">
   <link rel="stylesheet" href="css/style.css">
-  <script src="js/script.js"></script>
+  <script src="js/script-v1.3.js"></script>
   <script>
     window.onload = function() {
       setParameterValues();
