Massively increase responsiveness by preloading image

--- a/chaos-loadout.html
+++ b/chaos-loadout.html
@@ -174,5 +174,186 @@
         </div>
   	</div>
   </div>
+ <div id="preloaded-images">
+  <img src="img/aid.jpg" width="1" height="1"/>
+  <img src="img/ammo.jpg" width="1" height="1"/>
+  <img src="img/antidote.jpg" width="1" height="1"/>
+  <img src="img/antidote_weak.jpg" width="1" height="1"/>
+  <img src="img/axe.jpg" width="1" height="1"/>
+  <img src="img/axe_throw.jpg" width="1" height="1"/>
+  <img src="img/banner.jpg" width="1" height="1"/>
+  <img src="img/bannerhome.jpg" width="1" height="1"/>
+  <img src="img/bannerhometext.png" width="1" height="1"/>
+  <img src="img/bomb_lance.jpg" width="1" height="1"/>
+  <img src="img/bornheim.jpg" width="1" height="1"/>
+  <img src="img/bornheim_dual.jpg" width="1" height="1"/>
+  <img src="img/bornheim_ext.jpg" width="1" height="1"/>
+  <img src="img/bornheim_ext_dual.jpg" width="1" height="1"/>
+  <img src="img/bornheim_match.jpg" width="1" height="1"/>
+  <img src="img/bow.jpg" width="1" height="1"/>
+  <img src="img/cent.jpg" width="1" height="1"/>
+  <img src="img/cent_snip.jpg" width="1" height="1"/>
+  <img src="img/chaos.jpg" width="1" height="1"/>
+  <img src="img/choke.jpg" width="1" height="1"/>
+  <img src="img/concertina.jpg" width="1" height="1"/>
+  <img src="img/conversion.jpg" width="1" height="1"/>
+  <img src="img/conversion_chain.jpg" width="1" height="1"/>
+  <img src="img/conversion_chain_dual.jpg" width="1" height="1"/>
+  <img src="img/conversion_dual.jpg" width="1" height="1"/>
+  <img src="img/conversion_up.jpg" width="1" height="1"/>
+  <img src="img/conversion_up_dual.jpg" width="1" height="1"/>
+  <img src="img/crossbow.jpg" width="1" height="1"/>
+  <img src="img/crossbow_hand.jpg" width="1" height="1"/>
+  <img src="img/crown.jpg" width="1" height="1"/>
+  <img src="img/decoy.jpg" width="1" height="1"/>
+  <img src="img/decoy_blank.jpg" width="1" height="1"/>
+  <img src="img/decoy_fuses.jpg" width="1" height="1"/>
+  <img src="img/derringer.jpg" width="1" height="1"/>
+  <img src="img/dolch.jpg" width="1" height="1"/>
+  <img src="img/dolch_dual.jpg" width="1" height="1"/>
+  <img src="img/dolch_prec.jpg" width="1" height="1"/>
+  <img src="img/dollars.png" width="1" height="1"/>
+  <img src="img/dusters.jpg" width="1" height="1"/>
+  <img src="img/dynamite.jpg" width="1" height="1"/>
+  <img src="img/dynamite_big.jpg" width="1" height="1"/>
+  <img src="img/dynamite_bun.jpg" width="1" height="1"/>
+  <img src="img/dynamite_wax.jpg" width="1" height="1"/>
+  <img src="img/emptyLarge.jpg" width="1" height="1"/>
+  <img src="img/emptyMedium.jpg" width="1" height="1"/>
+  <img src="img/emptySmall.jpg" width="1" height="1"/>
+  <img src="img/fire.jpg" width="1" height="1"/>
+  <img src="img/fire_hell.jpg" width="1" height="1"/>
+  <img src="img/fire_liq.jpg" width="1" height="1"/>
+  <img src="img/flare.jpg" width="1" height="1"/>
+  <img src="img/flash.jpg" width="1" height="1"/>
+  <img src="img/frag.jpg" width="1" height="1"/>
+  <img src="img/fusees.jpg" width="1" height="1"/>
+  <img src="img/hive.jpg" width="1" height="1"/>
+  <img src="img/knife.jpg" width="1" height="1"/>
+  <img src="img/knife_heavy.jpg" width="1" height="1"/>
+  <img src="img/knife_throw.jpg" width="1" height="1"/>
+  <img src="img/knuckle.jpg" width="1" height="1"/>
+  <img src="img/lamp.jpg" width="1" height="1"/>
+  <img src="img/lebel.jpg" width="1" height="1"/>
+  <img src="img/lebel_mark.jpg" width="1" height="1"/>
+  <img src="img/lebel_tal.jpg" width="1" height="1"/>
+  <img src="img/lemat.jpg" width="1" height="1"/>
+  <img src="img/lemat_dual.jpg" width="1" height="1"/>
+  <img src="img/machete.jpg" width="1" height="1"/>
+  <img src="img/martini.jpg" width="1" height="1"/>
+  <img src="img/martini_dead.jpg" width="1" height="1"/>
+  <img src="img/martini_mark.jpg" width="1" height="1"/>
+  <img src="img/martini_rip.jpg" width="1" height="1"/>
+  <img src="img/mosin.jpg" width="1" height="1"/>
+  <img src="img/mosin_avto.jpg" width="1" height="1"/>
+  <img src="img/mosin_bay.jpg" width="1" height="1"/>
+  <img src="img/mosin_obr.jpg" width="1" height="1"/>
+  <img src="img/mosin_obr_drum.jpg" width="1" height="1"/>
+  <img src="img/mosin_obr_mace.jpg" width="1" height="1"/>
+  <img src="img/mosin_snip.jpg" width="1" height="1"/>
+  <img src="img/nagant.jpg" width="1" height="1"/>
+  <img src="img/nagant_dual.jpg" width="1" height="1"/>
+  <img src="img/nagant_prec.jpg" width="1" height="1"/>
+  <img src="img/nagant_prec_dead.jpg" width="1" height="1"/>
+  <img src="img/nagant_sup.jpg" width="1" height="1"/>
+  <img src="img/nagant_sup_dual.jpg" width="1" height="1"/>
+  <img src="img/nitro.jpg" width="1" height="1"/>
+  <img src="img/officer.jpg" width="1" height="1"/>
+  <img src="img/officer_bra.jpg" width="1" height="1"/>
+  <img src="img/officer_bra_dual.jpg" width="1" height="1"/>
+  <img src="img/officer_carb.jpg" width="1" height="1"/>
+  <img src="img/officer_carb_dead.jpg" width="1" height="1"/>
+  <img src="img/officer_dual.jpg" width="1" height="1"/>
+  <img src="img/pax.jpg" width="1" height="1"/>
+  <img src="img/pax_claw.jpg" width="1" height="1"/>
+  <img src="img/pax_claw_dual.jpg" width="1" height="1"/>
+  <img src="img/pax_dual.jpg" width="1" height="1"/>
+  <img src="img/poison.jpg" width="1" height="1"/>
+  <img src="img/previous.jpg" width="1" height="1"/>
+  <img src="img/reroll.jpg" width="1" height="1"/>
+  <img src="img/rival.jpg" width="1" height="1"/>
+  <img src="img/rival_hand.jpg" width="1" height="1"/>
+  <img src="img/romero.jpg" width="1" height="1"/>
+  <img src="img/romero_hand.jpg" width="1" height="1"/>
+  <img src="img/romero_hatc.jpg" width="1" height="1"/>
+  <img src="img/romero_tal.jpg" width="1" height="1"/>
+  <img src="img/saber.jpg" width="1" height="1"/>
+  <img src="img/sparks.jpg" width="1" height="1"/>
+  <img src="img/sparks_snip.jpg" width="1" height="1"/>
+  <img src="img/sparks_sup.jpg" width="1" height="1"/>
+  <img src="img/specter.jpg" width="1" height="1"/>
+  <img src="img/specter_bay.jpg" width="1" height="1"/>
+  <img src="img/specter_com.jpg" width="1" height="1"/>
+  <img src="img/springfield.jpg" width="1" height="1"/>
+  <img src="img/springfield_com.jpg" width="1" height="1"/>
+  <img src="img/springfield_com_dead.jpg" width="1" height="1"/>
+  <img src="img/springfield_com_str.jpg" width="1" height="1"/>
+  <img src="img/springfield_mark.jpg" width="1" height="1"/>
+  <img src="img/spyglass.jpg" width="1" height="1"/>
+  <img src="img/stamina.jpg" width="1" height="1"/>
+  <img src="img/stamina_weak.jpg" width="1" height="1"/>
+  <img src="img/sticky.jpg" width="1" height="1"/>
+  <img src="img/terminus.jpg" width="1" height="1"/>
+  <img src="img/terminus_hand.jpg" width="1" height="1"/>
+  <img src="img/trip_alert.jpg" width="1" height="1"/>
+  <img src="img/trip_con.jpg" width="1" height="1"/>
+  <img src="img/trip_poi.jpg" width="1" height="1"/>
+  <img src="img/vetterli.jpg" width="1" height="1"/>
+  <img src="img/vetterli_bay.jpg" width="1" height="1"/>
+  <img src="img/vetterli_dead.jpg" width="1" height="1"/>
+  <img src="img/vitality.jpg" width="1" height="1"/>
+  <img src="img/vitality_weak.jpg" width="1" height="1"/>
+  <img src="img/winfield.jpg" width="1" height="1"/>
+  <img src="img/winfieldc.jpg" width="1" height="1"/>
+  <img src="img/winfieldc_mark.jpg" width="1" height="1"/>
+  <img src="img/winfieldc_sup.jpg" width="1" height="1"/>
+  <img src="img/winfieldc_van.jpg" width="1" height="1"/>
+  <img src="img/winfieldc_van_dead.jpg" width="1" height="1"/>
+  <img src="img/winfieldc_van_str.jpg" width="1" height="1"/>
+  <img src="img/winfield_ap.jpg" width="1" height="1"/>
+  <img src="img/winfield_mus.jpg" width="1" height="1"/>
+  <img src="img/winfield_swi.jpg" width="1" height="1"/>
+  <img src="img/winfield_tal.jpg" width="1" height="1"/>
+
+  <img src="img/ammo/a-c.png" width="1" height="1"/>
+  <img src="img/ammo/a-f.png" width="1" height="1"/>
+  <img src="img/ammo/a-p.png" width="1" height="1"/>
+  <img src="img/ammo/b-c.png" width="1" height="1"/>
+  <img src="img/ammo/b-ch.png" width="1" height="1"/>
+  <img src="img/ammo/b-e.png" width="1" height="1"/>
+  <img src="img/ammo/b-p.png" width="1" height="1"/>
+  <img src="img/ammo/b-s.png" width="1" height="1"/>
+  <img src="img/ammo/b.png" width="1" height="1"/>
+  <img src="img/ammo/bomb.png" width="1" height="1"/>
+  <img src="img/ammo/c-d.png" width="1" height="1"/>
+  <img src="img/ammo/c-f.png" width="1" height="1"/>
+  <img src="img/ammo/c-h.png" width="1" height="1"/>
+  <img src="img/ammo/c-i.png" width="1" height="1"/>
+  <img src="img/ammo/c-p.png" width="1" height="1"/>
+  <img src="img/ammo/c.png" width="1" height="1"/>
+  <img src="img/ammo/dolch.png" width="1" height="1"/>
+  <img src="img/ammo/l-e.png" width="1" height="1"/>
+  <img src="img/ammo/l-f.png" width="1" height="1"/>
+  <img src="img/ammo/l-i.png" width="1" height="1"/>
+  <img src="img/ammo/l-p.png" width="1" height="1"/>
+  <img src="img/ammo/l-s.png" width="1" height="1"/>
+  <img src="img/ammo/l.png" width="1" height="1"/>
+  <img src="img/ammo/m-d.png" width="1" height="1"/>
+  <img src="img/ammo/m-e.png" width="1" height="1"/>
+  <img src="img/ammo/m-f.png" width="1" height="1"/>
+  <img src="img/ammo/m-i.png" width="1" height="1"/>
+  <img src="img/ammo/m-p.png" width="1" height="1"/>
+  <img src="img/ammo/m.png" width="1" height="1"/>
+  <img src="img/ammo/n-d.png" width="1" height="1"/>
+  <img src="img/ammo/n-e.png" width="1" height="1"/>
+  <img src="img/ammo/n.png" width="1" height="1"/>
+  <img src="img/ammo/none.png" width="1" height="1"/>
+  <img src="img/ammo/s-d.png" width="1" height="1"/>
+  <img src="img/ammo/s-f.png" width="1" height="1"/>
+  <img src="img/ammo/s-p.png" width="1" height="1"/>
+  <img src="img/ammo/s-s.png" width="1" height="1"/>
+  <img src="img/ammo/s-sl.png" width="1" height="1"/>
+  <img src="img/ammo/s.png" width="1" height="1"/>
+ </div>
 </body>
 </html>
