--- a/chaos-loadout.html
+++ b/chaos-loadout.html
@@ -46,6 +46,18 @@
         </div>
       </span>
     </div>
+    <div class="changelog-menu">
+      <div>
+        <a id="nav-toggle" class="noselect" onclick="toggleChangelog()">&#9941;</a>
+      </div>
+      <span id="changelog">
+        <div class="changelog-title">Changelog</div>
+        <ul>
+          <li>2021-10-02 - Preloaded images.</li>
+          <li>2021-09-28 - Updated for Hunt 1.6.1.3 patch.</li>
+        </ul>
+      </span>
+    </div>
     <audio id="tick" autoplay="autoplay">
       <source src="sound/tick.wav"></source>
     </audio>
