--- a/chaos-loadout.html
+++ b/chaos-loadout.html
@@ -3,11 +3,13 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
+  <META HTTP-EQUIV="CACHE-CONTROL" CONTENT="NO-CACHE">
+  <META HTTP-EQUIV="EXPIRES" CONTENT="Mon, 20 Feb 2012 00:00:01 GMT">
   <title>Hunt Random Loadout Generator</title>
   <meta name="description" content="A random loadout generator for the game Hunt : Showdown.">
   <meta name="author" content="RichardCQC">
-  <link rel="stylesheet" href="css/style.css">
-  <script src="js/script-v1.3.js"></script>
+  <link rel="stylesheet" href="css/style.css?v=2">
+  <script src="js/script.js?v=3"></script>
   <script>
     window.onload = function() {
       setParameterValues();
