Updated for hunt patch 1.6.2

--- a/chaos-loadout.html
+++ b/chaos-loadout.html
@@ -9,7 +9,7 @@
   <meta name="description" content="A random loadout generator for the game Hunt : Showdown.">
   <meta name="author" content="RichardCQC">
   <link rel="stylesheet" href="css/style.css?v=2">
-  <script src="js/script.js?v=3"></script>
+  <script src="js/script.js?v=4"></script>
   <script>
     window.onload = function() {
       setParameterValues();
@@ -55,6 +55,7 @@
       <span id="changelog">
         <div class="changelog-title">Changelog</div>
         <ul>
+          <li>2021-10-17 - Updated for Hunt 1.6.2 patch.</li>
           <li>2021-10-02 - Preloaded images.</li>
           <li>2021-09-28 - Updated for Hunt 1.6.1.3 patch.</li>
         </ul>
@@ -251,6 +252,7 @@
   <img src="img/lebel.jpg" width="1" height="1"/>
   <img src="img/lebel_mark.jpg" width="1" height="1"/>
   <img src="img/lebel_tal.jpg" width="1" height="1"/>
+  <img src="img/lebel_ap.jpg" width="1" height="1"/>
   <img src="img/lemat.jpg" width="1" height="1"/>
   <img src="img/lemat_dual.jpg" width="1" height="1"/>
   <img src="img/machete.jpg" width="1" height="1"/>
@@ -284,6 +286,8 @@
   <img src="img/pax_dual.jpg" width="1" height="1"/>
   <img src="img/poison.jpg" width="1" height="1"/>
   <img src="img/previous.jpg" width="1" height="1"/>
+  <img src="img/regen.jpg" width="1" height="1"/>
+  <img src="img/regen_weak.jpg" width="1" height="1"/>
   <img src="img/reroll.jpg" width="1" height="1"/>
   <img src="img/rival.jpg" width="1" height="1"/>
   <img src="img/rival_hand.jpg" width="1" height="1"/>
@@ -292,6 +296,8 @@
   <img src="img/romero_hatc.jpg" width="1" height="1"/>
   <img src="img/romero_tal.jpg" width="1" height="1"/>
   <img src="img/saber.jpg" width="1" height="1"/>
+  <img src="img/scottfield.jpg" width="1" height="1"/>
+  <img src="img/scottfield_dual.jpg" width="1" height="1"/>
   <img src="img/sparks.jpg" width="1" height="1"/>
   <img src="img/sparks_snip.jpg" width="1" height="1"/>
   <img src="img/sparks_sup.jpg" width="1" height="1"/>
@@ -315,6 +321,8 @@
   <img src="img/vetterli.jpg" width="1" height="1"/>
   <img src="img/vetterli_bay.jpg" width="1" height="1"/>
   <img src="img/vetterli_dead.jpg" width="1" height="1"/>
+  <img src="img/vetterli_mark.jpg" width="1" height="1"/>
+  <img src="img/vetterli_sup.jpg" width="1" height="1"/>
   <img src="img/vitality.jpg" width="1" height="1"/>
   <img src="img/vitality_weak.jpg" width="1" height="1"/>
   <img src="img/winfield.jpg" width="1" height="1"/>
@@ -356,6 +364,7 @@
   <img src="img/ammo/m-e.png" width="1" height="1"/>
   <img src="img/ammo/m-f.png" width="1" height="1"/>
   <img src="img/ammo/m-i.png" width="1" height="1"/>
+  <img src="img/ammo/m-h.png" width="1" height="1"/>
   <img src="img/ammo/m-p.png" width="1" height="1"/>
   <img src="img/ammo/m.png" width="1" height="1"/>
   <img src="img/ammo/n-d.png" width="1" height="1"/>
