--- a/chaos-loadout.html
+++ b/chaos-loadout.html
@@ -55,6 +55,7 @@
       <span id="changelog">
         <div class="changelog-title">Changelog</div>
         <ul>
+          <li>2021-11-25 - Updated for Hunt 1.7 patch.</li>
           <li>2021-10-17 - Updated for Hunt 1.6.2 patch.</li>
           <li>2021-10-02 - Preloaded images.</li>
           <li>2021-09-28 - Updated for Hunt 1.6.1.3 patch.</li>
