Updated for 1.7.2 and improved generation logic

--- a/chaos-loadout.html
+++ b/chaos-loadout.html
@@ -10,7 +10,7 @@
   <meta name="author" content="RichardCQC">
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <link rel="stylesheet" href="css/style.css?v=3">
-  <script src="js/script.js?v=6"></script>
+  <script src="js/script.js?v=7"></script>
   <script>
     window.onload = function() {
       setParameterValues();
@@ -56,6 +56,7 @@
       <span id="changelog">
         <div class="changelog-title">Changelog</div>
         <ul>
+          <li>2022-02-22 - Updated for hunt 1.7.2 and improved generation logic.</li>
           <li>2021-11-25 - Added force medkit option and mobile zoom fix.</li>
           <li>2021-11-25 - Updated for Hunt 1.7 patch.</li>
           <li>2021-10-17 - Updated for Hunt 1.6.2 patch.</li>
@@ -210,6 +211,8 @@
   <img src="img/banner.jpg" width="1" height="1"/>
   <img src="img/bannerhome.jpg" width="1" height="1"/>
   <img src="img/bannerhometext.png" width="1" height="1"/>
+  <img src="img/berthier.jpg" width="1" height="1"/>
+  <img src="img/berthier_dead.jpg" width="1" height="1"/>
   <img src="img/bomb_lance.jpg" width="1" height="1"/>
   <img src="img/bornheim.jpg" width="1" height="1"/>
   <img src="img/bornheim_dual.jpg" width="1" height="1"/>
@@ -308,6 +311,11 @@
   <img src="img/romero_tal.jpg" width="1" height="1"/>
   <img src="img/saber.jpg" width="1" height="1"/>
   <img src="img/scottfield.jpg" width="1" height="1"/>
+  <img src="img/scottfield_spit.jpg" width="1" height="1"/>
+  <img src="img/scottfield_spit_dual.jpg" width="1" height="1"/>
+  <img src="img/scottfield_swi.jpg" width="1" height="1"/>
+  <img src="img/scottfield_swi_dual.jpg" width="1" height="1"/>
+  <img src="img/scottfield_prec.jpg" width="1" height="1"/>
   <img src="img/scottfield_dual.jpg" width="1" height="1"/>
   <img src="img/sparks.jpg" width="1" height="1"/>
   <img src="img/sparks_snip.jpg" width="1" height="1"/>
