--- a/home.html
+++ b/home.html
@@ -38,7 +38,7 @@
                 <a class = "linkbutton" href="https://www.tiktok.com/@richardcqc">TikTok</a>
             </div>
             <div class="linkdiv">
-                <a class = "linkbutton" href="https://streamlabs.com/richardcqc/tip">Support me!</a>
+                <a class = "linkbutton" href="https://streamelements.com/richardcqc/tip">Buy me a coffee!</a>
             </div>
         </div>
     </div>
