Updated for hunt 1.8.1

--- a/chaos-loadout.html
+++ b/chaos-loadout.html
@@ -56,6 +56,7 @@
       <span id="changelog">
         <div class="changelog-title">Changelog</div>
         <ul>
+          <li>2022-05-25 - Updated for hunt 1.8.1.</li>
           <li>2022-02-22 - Updated for hunt 1.7.2 and improved generation logic.</li>
           <li>2021-11-25 - Added force medkit option and mobile zoom fix.</li>
           <li>2021-11-25 - Updated for Hunt 1.7 patch.</li>
@@ -287,6 +288,8 @@
   <img src="img/nagant_prec_dead.jpg" width="1" height="1"/>
   <img src="img/nagant_sup.jpg" width="1" height="1"/>
   <img src="img/nagant_sup_dual.jpg" width="1" height="1"/>
+  <img src="img/new.jpg" width="1" height="1"/>
+  <img src="img/new_dual.jpg" width="1" height="1"/>
   <img src="img/nitro.jpg" width="1" height="1"/>
   <img src="img/officer.jpg" width="1" height="1"/>
   <img src="img/officer_bra.jpg" width="1" height="1"/>
@@ -317,6 +320,7 @@
   <img src="img/scottfield_swi_dual.jpg" width="1" height="1"/>
   <img src="img/scottfield_prec.jpg" width="1" height="1"/>
   <img src="img/scottfield_dual.jpg" width="1" height="1"/>
+  <img src="img/slate.jpg" width="1" height="1"/>
   <img src="img/sparks.jpg" width="1" height="1"/>
   <img src="img/sparks_snip.jpg" width="1" height="1"/>
   <img src="img/sparks_sup.jpg" width="1" height="1"/>
