Updated for Serpent Moon Event

--- a/chaos-loadout.html
+++ b/chaos-loadout.html
@@ -10,7 +10,7 @@
   <meta name="author" content="RichardCQC">
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <link rel="stylesheet" href="css/style.css?v=3">
-  <script src="js/script.js?v=7"></script>
+  <script src="js/script.js?v=8"></script>
   <script>
     window.onload = function() {
       setParameterValues();
@@ -56,6 +56,7 @@
       <span id="changelog">
         <div class="changelog-title">Changelog</div>
         <ul>
+          <li>2022-08-01 - Updated for Serpent Moon Event.</li>
           <li>2022-05-25 - Updated for hunt 1.8.1.</li>
           <li>2022-02-22 - Updated for hunt 1.7.2 and improved generation logic.</li>
           <li>2021-11-25 - Added force medkit option and mobile zoom fix.</li>
@@ -309,6 +310,7 @@
   <img src="img/rival.jpg" width="1" height="1"/>
   <img src="img/rival_hand.jpg" width="1" height="1"/>
   <img src="img/romero.jpg" width="1" height="1"/>
+  <img src="img/romero_ala.jpg" width="1" height="1"/>
   <img src="img/romero_hand.jpg" width="1" height="1"/>
   <img src="img/romero_hatc.jpg" width="1" height="1"/>
   <img src="img/romero_tal.jpg" width="1" height="1"/>
@@ -322,6 +324,8 @@
   <img src="img/scottfield_dual.jpg" width="1" height="1"/>
   <img src="img/slate.jpg" width="1" height="1"/>
   <img src="img/sparks.jpg" width="1" height="1"/>
+  <img src="img/sparks_pistol.jpg" width="1" height="1"/>
+  <img src="img/sparks_pistol_dual.jpg" width="1" height="1"/>
   <img src="img/sparks_snip.jpg" width="1" height="1"/>
   <img src="img/sparks_sup.jpg" width="1" height="1"/>
   <img src="img/specter.jpg" width="1" height="1"/>
@@ -359,7 +363,6 @@
   <img src="img/winfield_mus.jpg" width="1" height="1"/>
   <img src="img/winfield_swi.jpg" width="1" height="1"/>
   <img src="img/winfield_tal.jpg" width="1" height="1"/>
-
   <img src="img/ammo/a-c.png" width="1" height="1"/>
   <img src="img/ammo/a-f.png" width="1" height="1"/>
   <img src="img/ammo/a-p.png" width="1" height="1"/>
