Updated for Hunt 1.10 patch.

--- a/chaos-loadout.html
+++ b/chaos-loadout.html
@@ -10,7 +10,7 @@
   <meta name="author" content="RichardCQC">
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <link rel="stylesheet" href="css/style.css?v=3">
-  <script src="js/script.js?v=8"></script>
+  <script src="js/script.js?v=9"></script>
   <script>
     window.onload = function() {
       setParameterValues();
@@ -56,9 +56,10 @@
       <span id="changelog">
         <div class="changelog-title">Changelog</div>
         <ul>
+          <li>2022-10-25 - Updated for Hunt 1.10 patch.</li>
           <li>2022-08-01 - Updated for Serpent Moon Event.</li>
-          <li>2022-05-25 - Updated for hunt 1.8.1.</li>
-          <li>2022-02-22 - Updated for hunt 1.7.2 and improved generation logic.</li>
+          <li>2022-05-25 - Updated for Hunt 1.8.1.</li>
+          <li>2022-02-22 - Updated for Hunt 1.7.2 and improved generation logic.</li>
           <li>2021-11-25 - Added force medkit option and mobile zoom fix.</li>
           <li>2021-11-25 - Updated for Hunt 1.7 patch.</li>
           <li>2021-10-17 - Updated for Hunt 1.6.2 patch.</li>
@@ -337,6 +338,7 @@
   <img src="img/springfield_com_str.jpg" width="1" height="1"/>
   <img src="img/springfield_mark.jpg" width="1" height="1"/>
   <img src="img/spyglass.jpg" width="1" height="1"/>
+  <img src="img/stalker.jpg" width="1" height="1"/>
   <img src="img/stamina.jpg" width="1" height="1"/>
   <img src="img/stamina_weak.jpg" width="1" height="1"/>
   <img src="img/sticky.jpg" width="1" height="1"/>
