Updated for hunt 1.11.0.4

--- a/chaos-loadout.html
+++ b/chaos-loadout.html
@@ -10,7 +10,7 @@
   <meta name="author" content="RichardCQC">
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <link rel="stylesheet" href="css/style.css?v=3">
-  <script src="js/script.js?v=9"></script>
+  <script src="js/script.js?v=10"></script>
   <script>
     window.onload = function() {
       setParameterValues();
@@ -56,6 +56,7 @@
       <span id="changelog">
         <div class="changelog-title">Changelog</div>
         <ul>
+          <li>2023-03-08 - Updated for Hunt 1.11.0.4 patch.</li>
           <li>2022-10-25 - Updated for Hunt 1.10 patch.</li>
           <li>2022-08-01 - Updated for Serpent Moon Event.</li>
           <li>2022-05-25 - Updated for Hunt 1.8.1.</li>
@@ -215,6 +216,7 @@
   <img src="img/bannerhome.jpg" width="1" height="1"/>
   <img src="img/bannerhometext.png" width="1" height="1"/>
   <img src="img/berthier.jpg" width="1" height="1"/>
+  <img src="img/berthier_ri.jpg" width="1" height="1"/>
   <img src="img/berthier_dead.jpg" width="1" height="1"/>
   <img src="img/bomb_lance.jpg" width="1" height="1"/>
   <img src="img/bornheim.jpg" width="1" height="1"/>
@@ -225,6 +227,7 @@
   <img src="img/bow.jpg" width="1" height="1"/>
   <img src="img/cent.jpg" width="1" height="1"/>
   <img src="img/cent_snip.jpg" width="1" height="1"/>
+  <img src="img/cent_tra.jpg" width="1" height="1"/>
   <img src="img/chaos.jpg" width="1" height="1"/>
   <img src="img/choke.jpg" width="1" height="1"/>
   <img src="img/concertina.jpg" width="1" height="1"/>
@@ -265,6 +268,7 @@
   <img src="img/knife_heavy.jpg" width="1" height="1"/>
   <img src="img/knife_throw.jpg" width="1" height="1"/>
   <img src="img/knuckle.jpg" width="1" height="1"/>
+  <img src="img/krag.jpg" width="1" height="1"/>
   <img src="img/lamp.jpg" width="1" height="1"/>
   <img src="img/lebel.jpg" width="1" height="1"/>
   <img src="img/lebel_mark.jpg" width="1" height="1"/>
@@ -272,11 +276,13 @@
   <img src="img/lebel_ap.jpg" width="1" height="1"/>
   <img src="img/lemat.jpg" width="1" height="1"/>
   <img src="img/lemat_dual.jpg" width="1" height="1"/>
+  <img src="img/lemat_carb.jpg" width="1" height="1"/>
   <img src="img/machete.jpg" width="1" height="1"/>
   <img src="img/martini.jpg" width="1" height="1"/>
   <img src="img/martini_dead.jpg" width="1" height="1"/>
   <img src="img/martini_mark.jpg" width="1" height="1"/>
   <img src="img/martini_rip.jpg" width="1" height="1"/>
+  <img src="img/martini_ir.jpg" width="1" height="1"/>
   <img src="img/mosin.jpg" width="1" height="1"/>
   <img src="img/mosin_avto.jpg" width="1" height="1"/>
   <img src="img/mosin_bay.jpg" width="1" height="1"/>
@@ -375,6 +381,8 @@
   <img src="img/ammo/b-s.png" width="1" height="1"/>
   <img src="img/ammo/b.png" width="1" height="1"/>
   <img src="img/ammo/bomb.png" width="1" height="1"/>
+  <img src="img/ammo/bomb-d.png" width="1" height="1"/>
+  <img src="img/ammo/bomb-sl.png" width="1" height="1"/>
   <img src="img/ammo/c-d.png" width="1" height="1"/>
   <img src="img/ammo/c-f.png" width="1" height="1"/>
   <img src="img/ammo/c-h.png" width="1" height="1"/>
